packages/cashc/test/compiler/ParseError/empty_list_trailing_comma.cash
contract Contract(
    pubkey ownerPk,
    pubkey oraclePk,
) {
    return {
        spend(,) {
            bytes oracleMessage = bytes('Spend') + bytes(12, 10,);
            require(checkDataSig(
                oracleMsgSig,
                oracleMessage,
                oraclePk,
            ));
            require(checkMultiSig([
                ownerSig,
                oracleTxSig,
            ], [
                ownerPk,
                oraclePk,
            ]));
        }
    }
}
